# eda_tool_agent

./: .dockerignore  .env.example  .gitignore  Agente_Leitor_de_CSV.json  Dockerfile  Dockerfile.streamlit  README.md  compose.yml  create_tables.sql  init.sql
backend/: pyproject.toml  requirements.txt
backend/src/: exception_handler.py  main.py  settings.py
backend/src/agents/: __init__.py  answer_agent.py  base_agent.py  data_analyst_agent.py  sql_agent.py
backend/src/controllers/: agent_controller.py  db_controller.py
backend/src/schemas/: __init__.py  model_schemas.py  user_schemas.py
backend/src/services/: __init__.py  chat_model.py  data_input.py  data_processing.py  db_services.py
backend/src/tools/: __init__.py  data_analysis_tool.py  database_tool.py  datetime_tool.py  parser_tool.py  python_tool.py  sql_agent_tool.py  use_analyst_tool.py
backend/src/utils/: exceptions.py
chatbot_ui/: Dockerfile  pyproject.toml
chatbot_ui/src/: app.py  index.html
chatbot_ui/src/static/: main.js  sidebar.js  styles.css
docs/: architecture.excalidraw
frontend/: pyproject.toml  requirements.txt
frontend/src/: main.py
frontend/src/components/: __init__.py  chat_section.py  header_section.py  sidebar_menu.py  styles.py  upload_archive.py
frontend/src/utils/: api__tools.py
