[project]
name = "rag-agent-chatbot"
version = "0.1.0"
description = "agentic AI with langchain for conversation over data received by the user."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain[google-genai,groq]>=0.3.27",
    "langgraph>=0.6.7",
    "numexpr>=2.10.2",
    "pandas>=2.3.2",
    "pydantic-settings>=2.11.0",
]

[tool.ruff.format]
quote-style = "single"
