[project]
name = "eda-tool-agent"
version = "0.1.0"
description = "agentic AI with langchain for conversation over data received by the user."
readme = "README.md"
requires-python = ">=3.10.7"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain[google-genai,groq]>=0.3.27",
    "langsmith>=0.4.28",
    "numexpr>=2.10.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "tabulate>=0.9.0",
]

[tool.ruff.format]
quote-style = "single"
